changed to fix graphs on mobile
Graphs were too small when switched to landscape
on phones

--- a/StockWatcher/ClientApp/src/styles/graphs.scss
+++ b/StockWatcher/ClientApp/src/styles/graphs.scss
@@ -18,13 +18,13 @@
     position: relative;
     box-sizing: border-box;
     border-top: 2px solid gray;
-    height: 60vh;
+    height: 90vh;
     padding-bottom: 40px;
-    @media screen and (min-width: $small) {
-        height: 50vh;
+    @media screen and (min-height: $small) {
+        height: 80vh;
     }
-    @media screen and (min-width: $medium) {
-        height: 40vh;
+    @media screen and (min-height: $medium) {
+        height: 60vh;
     }
     .material-icons.red-remove700 {
         color: #FF1744;
